[package]
name = "vagg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
datafusion = { version = "47", default-features = false }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "fs"] }
vortex = { version = "0.39.0", features = ["object_store"] }
vortex-datafusion = "0.39.0"
